# create-react-django-app

./: README.md  pyproject.toml
client/: package.json
client/src/: App.tsx
server/exampleApp/: apps.py  models.py  serializers.py  urls.py  views.py
server/exampleApp/migrations/: 0001_initial.py
server/main/: asgi.py  settings.py  urls.py  wsgi.py
